@@ -1,172 +1,129 @@
 package run.ikaros.server.infra.utils;
 
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.Base64;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 class AesEncryptUtilsTest {
 
-    @TempDir
-    Path tempDir;
-
     @Test
-    void generateKeyByteArrayDefaultLength() {
-        byte[] keyBytes = AesEncryptUtils.generateKeyByteArray();
-        assertNotNull(keyBytes);
-        assertTrue(keyBytes.length > 0, "Default key bytes should not be empty");
-        // Default is 192-bit, Base64-encoded: ceil(192/8) = 24 raw bytes -> Base64 = 32 chars
-        byte[] decoded = Base64.getDecoder().decode(keyBytes);
-        assertEquals(24, decoded.length, "Default 192-bit key should decode to 24 bytes");
+    void generateKeyByteArray_default_returnsBase64Bytes() {
+        byte[] keyB64 = AesEncryptUtils.generateKeyByteArray();
+        assertThat(keyB64).isNotNull();
+        // decode to verify it's valid base64 and 24 raw bytes (192-bit default)
+        byte[] rawKey = Base64.getDecoder().decode(keyB64);
+        assertThat(rawKey).hasSize(24);
     }
 
     @Test
-    void generateKeyByteArray128() {
-        byte[] keyBytes = AesEncryptUtils.generateKeyByteArray(128);
-        assertNotNull(keyBytes);
-        byte[] decoded = Base64.getDecoder().decode(keyBytes);
-        assertEquals(16, decoded.length, "128-bit key should decode to 16 bytes");
+    void generateKeyByteArray_128bit_returnsValidKey() {
+        byte[] keyB64 = AesEncryptUtils.generateKeyByteArray(128);
+        assertThat(keyB64).isNotNull();
+        byte[] rawKey = Base64.getDecoder().decode(keyB64);
+        assertThat(rawKey).hasSize(16); // 128 bits = 16 bytes
     }
 
     @Test
-    void generateKeyByteArray256() {
-        byte[] keyBytes = AesEncryptUtils.generateKeyByteArray(256);
-        assertNotNull(keyBytes);
-        byte[] decoded = Base64.getDecoder().decode(keyBytes);
-        assertEquals(32, decoded.length, "256-bit key should decode to 32 bytes");
+    void generateKeyByteArray_256bit_returnsValidKey() {
+        byte[] keyB64 = AesEncryptUtils.generateKeyByteArray(256);
+        assertThat(keyB64).isNotNull();
+        byte[] rawKey = Base64.getDecoder().decode(keyB64);
+        assertThat(rawKey).hasSize(32); // 256 bits = 32 bytes
     }
 
     @Test
-    void encryptDecryptByteArrayRoundtrip() {
-        byte[] keyBytes = Base64.getDecoder().decode(AesEncryptUtils.generateKeyByteArray());
-        byte[] original = "Hello, AES encryption!".getBytes();
+    void encryptDecrypt_roundTrip_bytes() throws Exception {
+        byte[] keyB64 = AesEncryptUtils.generateKeyByteArray(128);
+        byte[] rawKey = Base64.getDecoder().decode(keyB64);
+        String original = "Hello AES World! " + System.currentTimeMillis();
+        byte[] originalBytes = original.getBytes(StandardCharsets.UTF_8);
 
-        byte[] encrypted = AesEncryptUtils.encryptByteArray(keyBytes, original);
-        assertNotNull(encrypted);
-        byte[] decrypted = AesEncryptUtils.decryptByteArray(keyBytes, encrypted);
-        assertNotNull(decrypted);
-        assertArrayEquals(original, decrypted);
+        // encryptByteArray(byte[] key, byte[] data)
+        byte[] encrypted = AesEncryptUtils.encryptByteArray(rawKey, originalBytes);
+        assertThat(encrypted).isNotNull();
+        assertThat(encrypted).isNotEqualTo(originalBytes);
+
+        // decryptByteArray(byte[] key, byte[] encryptedDataBase64)
+        byte[] decrypted = AesEncryptUtils.decryptByteArray(rawKey, encrypted);
+        String result = new String(decrypted, StandardCharsets.UTF_8);
+        assertThat(result).isEqualTo(original);
     }
 
     @Test
-    void encryptDecryptWithBase64StringKey() {
-        byte[] keyBytes = AesEncryptUtils.generateKeyByteArray();
-        String keyStrBase64 = new String(keyBytes);
-        byte[] original = "Test string key encryption".getBytes();
+    void encryptDecrypt_withStringKey() throws Exception {
+        byte[] keyB64 = AesEncryptUtils.generateKeyByteArray(128);
+        String keyBase64Str = new String(keyB64, StandardCharsets.UTF_8);
+        String original = "测试中文加密内容";
 
-        byte[] encrypted = AesEncryptUtils.encryptByteArray(keyStrBase64, original);
-        assertNotNull(encrypted);
-        byte[] decrypted = AesEncryptUtils.decryptByteArray(keyStrBase64, encrypted);
-        assertNotNull(decrypted);
-        assertArrayEquals(original, decrypted);
+        // encryptByteArray(String base64Key, byte[] data)
+        byte[] encrypted = AesEncryptUtils.encryptByteArray(keyBase64Str,
+            original.getBytes(StandardCharsets.UTF_8));
+        assertThat(encrypted).isNotNull();
+
+        byte[] rawKey = Base64.getDecoder().decode(keyB64);
+        byte[] decrypted = AesEncryptUtils.decryptByteArray(rawKey, encrypted);
+        String result = new String(decrypted, StandardCharsets.UTF_8);
+        assertThat(result).isEqualTo(original);
     }
 
     @Test
-    void generateKeyFileAndEncryptDecrypt() throws IOException {
-        File keyFile = tempDir.resolve("aes.key").toFile();
+    void generateKeyFile_validPath_createsFile(@TempDir File tempDir) throws Exception {
+        File keyFile = new File(tempDir, "aes.key");
         AesEncryptUtils.generateKeyFile(keyFile);
-        assertTrue(keyFile.exists());
-        assertTrue(keyFile.length() > 0);
-
-        byte[] keyBytes = Base64.getDecoder().decode(Files.readAllBytes(keyFile.toPath()));
-        byte[] original = "File key test data".getBytes();
-
-        byte[] encrypted = AesEncryptUtils.encryptByteArray(keyFile, original);
-        assertNotNull(encrypted);
-        byte[] decrypted = AesEncryptUtils.decryptByteArray(keyBytes, encrypted);
-        assertArrayEquals(original, decrypted);
+        assertThat(keyFile).exists();
+        assertThat(keyFile.length()).isGreaterThan(0);
     }
 
     @Test
-    void encryptDecryptInputStreamRoundtrip() throws IOException {
-        byte[] keyBytes = Base64.getDecoder().decode(AesEncryptUtils.generateKeyByteArray());
-        byte[] original = "Stream encryption test content".getBytes();
-
-        // Encrypt
-        ByteArrayOutputStream encryptedOut = new ByteArrayOutputStream();
-        AesEncryptUtils.encryptInputStream(
-            new ByteArrayInputStream(original), true, encryptedOut, keyBytes);
-        byte[] encrypted = encryptedOut.toByteArray();
-
-        // Decrypt
-        ByteArrayOutputStream decryptedOut = new ByteArrayOutputStream();
-        AesEncryptUtils.decryptInputStream(
-            new ByteArrayInputStream(encrypted), true, decryptedOut, keyBytes);
-        byte[] decrypted = decryptedOut.toByteArray();
-
-        assertArrayEquals(original, decrypted);
+    void generateKeyFile_customLength_createsFile(@TempDir File tempDir) throws Exception {
+        File keyFile = new File(tempDir, "aes256.key");
+        AesEncryptUtils.generateKeyFile(256, keyFile);
+        assertThat(keyFile).exists();
+        // key file content is base64 encoded, should be ~44 chars for 256-bit = 32 raw bytes
+        String content = Files.readString(keyFile.toPath()).trim();
+        byte[] rawKey = Base64.getDecoder().decode(content);
+        assertThat(rawKey).hasSize(32);
     }
 
     @Test
-    void encryptDecryptFileWithFileKey() throws IOException {
-        File keyFile = tempDir.resolve("key.dat").toFile();
-        AesEncryptUtils.generateKeyFile(keyFile);
+    void encryptFile_decryptFile_roundTrip(@TempDir File tempDir) throws Exception {
+        byte[] keyB64 = AesEncryptUtils.generateKeyByteArray(128);
+        File keyFile = new File(tempDir, "secret.key");
+        Files.write(keyFile.toPath(), keyB64);
 
-        File dataFile = tempDir.resolve("data.txt").toFile();
-        byte[] original = "File encryption roundtrip".getBytes();
-        try (FileOutputStream fos = new FileOutputStream(dataFile)) {
-            fos.write(original);
-        }
+        File originalFile = new File(tempDir, "original.txt");
+        File encryptedFile = new File(tempDir, "encrypted.bin");
+        File decryptedFile = new File(tempDir, "decrypted.txt");
 
-        File encryptedFile = tempDir.resolve("encrypted.dat").toFile();
-        AesEncryptUtils.encryptFile(keyFile, dataFile, encryptedFile);
-        assertTrue(encryptedFile.exists());
+        Files.write(originalFile.toPath(), "File encryption test".getBytes());
 
-        File decryptedFile = tempDir.resolve("decrypted.txt").toFile();
+        // encryptFile(keyFile, dataFile, encryptedFile)
+        AesEncryptUtils.encryptFile(keyFile, originalFile, encryptedFile);
+        // decryptFile(keyFile, dataFile, decryptedFile)
         AesEncryptUtils.decryptFile(keyFile, encryptedFile, decryptedFile);
-        assertTrue(decryptedFile.exists());
 
-        byte[] decrypted = Files.readAllBytes(decryptedFile.toPath());
-        assertArrayEquals(original, decrypted);
+        String decryptedContent = Files.readString(decryptedFile.toPath());
+        assertThat(decryptedContent).isEqualTo("File encryption test");
     }
 
     @Test
-    void encryptFileWithByteArrayKeyAndDecrypt() throws IOException {
-        byte[] keyBytes = Base64.getDecoder().decode(AesEncryptUtils.generateKeyByteArray());
+    void encryptByteArray_withKeyFile_roundTrip(@TempDir File tempDir) throws Exception {
+        File keyFile = new File(tempDir, "secret.key");
+        AesEncryptUtils.generateKeyFile(keyFile);
+        String original = "Encrypt with key file";
 
-        File dataFile = tempDir.resolve("input.txt").toFile();
-        byte[] original = "ByteArray key file test".getBytes();
-        try (FileOutputStream fos = new FileOutputStream(dataFile)) {
-            fos.write(original);
-        }
+        byte[] encrypted = AesEncryptUtils.encryptByteArray(keyFile, original.getBytes(StandardCharsets.UTF_8));
+        assertThat(encrypted).isNotNull();
 
-        byte[] encrypted = AesEncryptUtils.encryptFile(keyBytes, dataFile);
-        assertNotNull(encrypted);
-
-        byte[] decrypted = AesEncryptUtils.decryptFile(keyBytes,
-            createTempFileFromBytes("encrypted.dat", encrypted));
-        assertArrayEquals(original, decrypted);
-    }
-
-    @Test
-    void encryptEmptyByteArray() {
-        byte[] keyBytes = Base64.getDecoder().decode(AesEncryptUtils.generateKeyByteArray());
-        byte[] original = new byte[0];
-
-        byte[] encrypted = AesEncryptUtils.encryptByteArray(keyBytes, original);
-        assertNotNull(encrypted);
-
-        byte[] decrypted = AesEncryptUtils.decryptByteArray(keyBytes, encrypted);
-        assertNotNull(decrypted);
-        assertArrayEquals(original, decrypted);
-    }
-
-    private File createTempFileFromBytes(String name, byte[] bytes) throws IOException {
-        File file = tempDir.resolve(name).toFile();
-        try (FileOutputStream fos = new FileOutputStream(file)) {
-            fos.write(bytes);
-        }
-        return file;
+        byte[] keyB64 = Files.readAllBytes(keyFile.toPath());
+        byte[] rawKey = Base64.getDecoder().decode(keyB64);
+        byte[] decrypted = AesEncryptUtils.decryptByteArray(rawKey, encrypted);
+        String result = new String(decrypted, StandardCharsets.UTF_8);
+        assertThat(result).isEqualTo(original);
     }
 }
